# ins_init

./: .gitignore  CMakeLists.txt  LICENSE  README.md  index.md  package.xml
assets/: imu_test_00.csv
cfg/: rosconsole.conf
include/ins_init/: coarse_init.h  config.h  ekf.h  fine_init_acc.h  fine_init_vel.h  global.h  imu.h  reader.h  utils.h
launch/: test_ins_init_acc.launch  test_ins_init_vel.launch
python/: simple_example.py
scripts/: analyze.py  simple_example.py
src/: coarse_init.cpp  ekf.cpp
test/: test_ins_init.cpp  test_ins_init_acc.cpp  test_ins_init_vel.cpp
