CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(ins_init)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_VERBOSE_MAKEFILE OFF)
SET(CMAKE_CXX_FLAGS "-Wall -g -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unknown-pragmas -Wpedantic")

FIND_PACKAGE(Eigen3 REQUIRED)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(
  include
  ${EIGEN3_INCLUDE_DIRS}
)

LIST(APPEND SRCS
  src/coarse_init.cpp
  src/ekf.cpp
)

ADD_LIBRARY(ins_init SHARED
  ${SRCS}
)
TARGET_LINK_LIBRARIES(ins_init ${LIBS})

ADD_EXECUTABLE(test_ins_init_acc test/test_ins_init_acc.cpp)
TARGET_LINK_LIBRARIES(test_ins_init_acc ins_init)

